Bug: Fixed print layout issues

--- a/src/app/components/invoice-view/invoice-view.component.scss
+++ b/src/app/components/invoice-view/invoice-view.component.scss
@@ -3,6 +3,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: white;
+    page-break-inside: avoid;
     .header-section {
         width: 100%;
         .row {
@@ -20,6 +21,7 @@
         font-weight: bold;
     }
     .invoice-container {
+        page-break-after: always;
         display: flex;
         flex-direction: column;
         margin: 10px;
@@ -29,6 +31,7 @@
         }
         .row {
             display: flex;
+            page-break-inside: avoid;
         }
         .section {
             display: flex;
@@ -54,4 +57,8 @@
             justify-content: space-between;
         }
     }
+}
+
+.splittable {
+    page-break-after: always;
 }
