--- a/src/app/components/print-layout/print-layout.component.scss
+++ b/src/app/components/print-layout/print-layout.component.scss
@@ -6,7 +6,7 @@
     .header-space,
     .footer,
     .footer-space {
-        height: 100px;
+        height: 10px;
     }
     .header {
         position: fixed;
